--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
       <!-- Enhanced Images -->
       <div class="column">
         <h2>Enhanced Images</h2>
-        <img src="Results/result1.jpg" alt="Enhanced Image 1">
-        <img src="Results/result2.jpg" alt="Enhanced Image 2">
+        <img src="result1.jpg" alt="Enhanced Image 1">
+        <img src="result2.jpg" alt="Enhanced Image 2">
         <!-- Add more enhanced images if needed -->
       </div>
     </div>
